--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.3.0",
+    "react-number-format": "^4.9.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
